<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smart.smartdoor.fragment.HomeFragment"
        android:label="@string/title_nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.smart.smartdoor.fragment.SettingFragment"
        android:label="@string/title_nav_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_opinion"
        android:name="com.smart.smartdoor.fragment.FeedbackFragment"
        android:label="@string/title_nav_feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>